--- a/css/index1.css
+++ b/css/index1.css
@@ -4,23 +4,22 @@
     box-sizing: border-box;
 }
 
-/* Body Styling */
 body {
-    font-family: 'Titillium Web', 'Work Sans', Arial, sans-serif;
-    background-image: url("/image/glacier1.jpg");
+    font-family: "Titillium Web", sans-serif;
+    font-style: normal;
+    background-image: url("/image/glacierbg.jpg");
     background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    padding-top: 60px; /* Space for fixed navbar */
+    padding-top: 50px; 
 }
 
-/* Navbar Styling */
+
 nav {
     width: 100%;
     background-color: #001233;
-    color: #979dac;
     position: fixed;
     top: 0;
     left: 0;
@@ -29,7 +28,6 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     z-index: 10;
 }
 
@@ -46,26 +44,6 @@ nav {
     font-size: 1.2em;
 }
 
-.navbar-list ul {
-    display: flex;
-    list-style: none;
-}
-
-.nav-item {
-    margin-left: 20px;
-}
-
-.nav-link {
-    color: #979dac;
-    text-decoration: none;
-    font-size: 1em;
-}
-
-.nav-link:hover {
-    text-decoration: underline;
-}
-
-/* Main Section Styling */
 #coordinates {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
@@ -79,7 +57,12 @@ nav {
 
 h1 {
     color: #03045e;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+#weatherDescription {
+    color: #03045e;
+    font-style: italic; 
 }
 
 form {
@@ -126,7 +109,7 @@ button:hover {
     text-decoration: underline;
 }
 
-#weatherData {
+#weatherData, #forecastData {
     margin-top: 20px;
     text-align: left;
 }
@@ -135,31 +118,39 @@ button:hover {
     display: none;
 }
 
-/* About Section Styling */
 #about {
     background-color: rgba(255, 255, 255, 0.8);
+    /* font-style: italic; */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 10px; 
     z-index: 1;
 }
 
-#about h2 {
-    margin-bottom: 10px;
+
+#about h2, #forecastData h2, #weatherData h2 {
     color: #03045e;
 }
 
-/* Footer Styling */
 footer {
-    width: 100%;
     background-color: #001233;
     color: #979dac;
     text-align: center;
-    padding: 10px 0;
-    position: sticky;
+    padding: 10px;
+    position: fixed;
     bottom: 0;
+    width: 100%;
 }
 
+/* Changing width to full-width when the weather details is entered */
+#about.full-width {   
+    width: 100%; 
+    max-width: none; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px; 
+}
